--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -3,8 +3,10 @@ package:
     version: 0.7.1
 
 requirements:
-    build: ['nodejs']
-    run: ['nodejs']
+    build: 
+      - nodejs=0.8
+    run:
+      - nodejs=0.8
 
 about:
   home: https://github.com/ContinuumIO/cloud9
